# Rasterisation_SimpleRenderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Rasterizer.sln  Rasterizer.vcxproj  Rasterizer.vcxproj.filters
src/: Camera.cpp  Camera.hpp  ColorRGB.hpp  Image.cpp  Image.hpp  Matrix.hpp  Polygon.hpp  Screen.hpp  Vector3.hpp  WritableImage.hpp  dummy.cpp  main.cpp
test/: CMakeLists.txt  RastarisationTest.vcxproj  RastarisationTest.vcxproj.filters
test/src/: TestCamera.cpp  TestColorRGB.cpp  TestMatrix.cpp  TestPolygon.cpp  TestScreen.cpp  TestVector3.cpp  empty.cpp
